# vsvg

crates/whiskers-web-demo/: Cargo.toml
crates/whiskers-web-demo/src/: lib.rs
