[package]
name = "whiskers-web-demo"
description = "Official demo sketch for whiskers."
version = "0.4.0-alpha.0"
edition = "2021"
readme = "README.md"
homepage = "https//bylr.info/vsvg/"
repository = "https://github.com/abey79/vsvg"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#vsvg = { git = "https://github.com/abey79/vsvg", rev = "86ac544d0c049b3018d6f0a56611965886f0d461" }
whiskers = { workspace = true, features = ["viewer"] }
vsvg.workspace = true
itertools.workspace = true
